--- a/client/main.css
+++ b/client/main.css
@@ -3,3 +3,9 @@ body {
   color: #0a1520;
   font-family: 'Poppins', sans-serif;
 }
+
+.gameForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
