--- a/client/main.css
+++ b/client/main.css
@@ -7,12 +7,42 @@ body {
 .gameForm {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  font-family: 'Galindo', sans-serif;
+
+  background-color: black;
+  color: white;
+  max-width: 400px;
+  width: 100%;
+  padding: 2rem;
+  margin: 2rem auto;
+  border-radius: 8px;
+  gap: 1rem;
+}
+
+.letter {
+  text-align: center;
+  max-width: 320px;
+  background-color: white;
+  color: black;
+}
+
+.instructions {
+  text-align: center;
+  max-width: 600px;
+  background-color: white;
+  color: black;
 }
 
 .singleForm {
-  flex-direction: row;
-  margin: 1%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  font-family: 'Galindo', sans-serif;
+}
+
+.singleForm input {
+  padding: 0.5rem;
+  font-size: 1rem;
 }
 
 .resultContainer {
@@ -20,4 +50,34 @@ body {
   grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
   max-width: 1000px;
+}
+
+.submitButton {
+  width: 105px;
+  height: 45px;
+  background-color: black;
+  color: white;
+  font-family: 'Galindo', sans-serif;
+  font-size: large;
+  margin-top: 1rem;
+
+  align-self: center;
+  border: 2px solid white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Galindo', sans-serif;
+  font-size: 3rem;
+  text-align: center;
+
+  color: black;
+  max-width: 400px;
+  width: 100%;
+
+  margin: 2rem auto;
+  gap: 1rem;
 }
