--- a/client/main.css
+++ b/client/main.css
@@ -4,6 +4,17 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.header {
+  font-family: 'Jersey 20', sans-serif;
+  font-size: 6rem;
+  color: 'black';
+  text-align: center;
+}
+
+.subHeader {
+  font-size: 3rem;
+}
+
 .gameForm {
   display: flex;
   flex-direction: column;
@@ -26,7 +37,7 @@ body {
   color: black;
 }
 
-.instructions {
+.info {
   text-align: center;
   max-width: 600px;
   background-color: white;
@@ -49,7 +60,7 @@ body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
-  max-width: 1000px;
+  max-width: 1200px;
 }
 
 .submitButton {
@@ -71,13 +82,13 @@ body {
   display: flex;
   flex-direction: column;
   font-family: 'Galindo', sans-serif;
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
 
   color: black;
   max-width: 400px;
   width: 100%;
-
   margin: 2rem auto;
+  padding: 1rem;
   gap: 1rem;
 }
