--- a/client/main.css
+++ b/client/main.css
@@ -24,7 +24,7 @@ body {
   flex-direction: column;
   font-family: 'Galindo', sans-serif;
 
-  background-color: black;
+  background-color: #1a1a2e;
   color: white;
   max-width: 400px;
   width: 100%;
