added a review component, added route to  navbar

--- a/client/main.css
+++ b/client/main.css
@@ -473,3 +473,17 @@ button {
   white-space: nowrap;
   border: 0;
 }
+
+.submit {
+  display: block;
+  text-align: center;
+}
+input[type='checkbox'] {
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+}
